# cmake_project_test

./: .gitignore  CMakeLists.txt  README.md
src/: hello.cpp  main.cpp
